Impl [nuclio][monaco] Revert to standard themes

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -64,7 +64,7 @@
              class="code-edit-section">
             <ncl-monaco data-function-source-code="$ctrl.version.spec.build.functionSourceCode"
                         data-selected-theme="$ctrl.selectedTheme.id"
-                        data-runtime="$ctrl.version.spec.runtime"
+                        data-language="$ctrl.selectedRuntime.language"
                         data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"></ncl-monaco>
         </div>
     </div>
