--- a/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -28,6 +28,7 @@
                                           data-form-object="$ctrl.functionFromScratchForm"
                                           data-input-name="runtime"></igz-default-dropdown>
                     <div class="bottom-bar">
+                        <button class="ncl-secondary-button" data-ng-click="$ctrl.cancelCreating($event)">CANCEL</button>
                         <button class="ncl-primary-button" data-ng-click="$ctrl.createFunction()">CREATE FUNCTION</button>
                     </div>
                 </div>
