--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -16,6 +16,7 @@
                         <igz-default-dropdown data-values-array="$ctrl.runtimeArray"
                                               data-item-select-callback="$ctrl.selectRuntimeValue(item, isItemChanged, field)"
                                               data-selected-item="$ctrl.selectedRuntime"
+                                              data-is-disabled="true"
                                               data-on-close-dropdown="$ctrl.onCloseDropdown()"></igz-default-dropdown>
                     </div>
                     <div class="code-entry-col code-entry-handler-col">
