--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -3,8 +3,8 @@
     <form name="$ctrl.resourcesForm" class="resources-wrapper">
         <div class="row">
             <!-- TODO -->
-            <div class="sliders-block"
-                 data-ng-if="$ctrl.isDemoMode()">
+            <div data-ng-if="$ctrl.isDemoMode()"
+                 class="sliders-block">
                 <div class="slider-row">
                     <igz-slider-input-block data-slider-config="$ctrl.memorySliderConfig"
                                             data-measure-units="$ctrl.defaultMeasureUnits"
