--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -32,7 +32,8 @@
                         class="configuration-block"
                         data-version="$ctrl.version"></ncl-version-configuration-build>
             </div>
-            <div class="row">
+            <div data-ng-if="$ctrl.isDemoMode()"
+                 class="row">
                 <ncl-version-configuration-logging
                         class="configuration-block"
                         data-version="$ctrl.version"></ncl-version-configuration-logging>
