--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
@@ -29,6 +29,7 @@
             </div>
         </div>
         <div class="bottom-bar">
+            <button class="ncl-secondary-button" data-ng-click="$ctrl.cancelCreating($event)">CANCEL</button>
             <button class="ncl-primary-button" data-ng-click="$ctrl.createFunction()">CREATE FUNCTION</button>
         </div>
     </div>
