--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
@@ -1,5 +1,5 @@
 <div class="ncl-function-version-row common-table-row">
-    <div class="common-table-cell check-row">
+    <div data-ng-class="{'invisible': !$ctrl.isDemoMode()}"class="common-table-cell check-row">
         <igz-action-checkbox data-item="$ctrl.version"></igz-action-checkbox>
     </div>
     <div class="igz-row common-table-cells-container"
@@ -8,14 +8,19 @@
             {{$ctrl.version.name}}
         </div>
         <div class="igz-col-45 common-table-cell empty"></div>
-        <div class="igz-col-10 common-table-cell invocation">
+        <div data-ng-if="$ctrl.isDemoMode()"
+             class="igz-col-10 common-table-cell invocation">
             {{$ctrl.version.invocation}}
         </div>
         <div class="igz-col-10 common-table-cell empty"></div>
-        <div class="igz-col-10 common-table-cell created-date">{{$ctrl.version.last_modified | date:"MMM dd, yyyy"}}</div>
+        <div data-ng-if="$ctrl.isDemoMode()"
+             class="igz-col-10 common-table-cell created-date">
+            {{$ctrl.version.last_modified | date:"MMM dd, yyyy"}}
+        </div>
     </div>
     <div class="common-table-cell actions-menu">
-        <igz-action-menu data-actions="$ctrl.actions"
+        <igz-action-menu data-ng-if="$ctrl.isDemoMode()"
+                         data-actions="$ctrl.actions"
                          data-on-fire-action="$ctrl.onFireAction">
         </igz-action-menu>
     </div>
