--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -2,7 +2,11 @@
     <div class="title">Basic Settings</div>
     <form name="$ctrl.basicSettingsForm" class="basic-settings-wrapper">
         <div class="row enable-checkbox">
-            <input type="checkbox" class="small" id="enable" data-ng-model="$ctrl.enableEdit">
+            <input type="checkbox"
+                   class="small"
+                   id="enable"
+                   data-ng-model="$ctrl.enableFunction"
+                   data-ng-change="$ctrl.updateEnableStatus()">
             <label for="enable" class="checkbox-inline">Enabled</label>
         </div>
         <div class="row">
@@ -14,13 +18,13 @@
                                             data-input-name="namespace"
                                             data-input-value="$ctrl.version.metadata.namespace"
                                             data-is-focused="false"
-                                            data-is-disabled="!$ctrl.enableEdit"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="metadata.namespace"
                                             data-form-object="$ctrl.basicSettingsForm"
                                             data-placeholder-text="Type a namespace..."></igz-validating-input-field>
             </div>
-            <div class="timeout-block">
+            <div data-ng-if="$ctrl.isDemoMode()"
+                 class="timeout-block">
                 <div class="label">
                     <div class="timeout-checkbox">
                         <input type="checkbox" class="small" id="timeout" data-ng-model="$ctrl.enableTimeout">
@@ -70,7 +74,6 @@
                                             data-input-name="description"
                                             data-input-value="$ctrl.version.spec.description"
                                             data-is-focused="false"
-                                            data-is-disabled="!$ctrl.enableEdit"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-update-data-field="spec.description"
                                             data-form-object="$ctrl.basicSettingsForm"
