--- a/src/nuclio/projects/projects-table-row/projects-table-row.tpl.html
+++ b/src/nuclio/projects/projects-table-row/projects-table-row.tpl.html
@@ -10,10 +10,12 @@
         <div class="igz-col-25 common-table-cell description">
             {{$ctrl.project.spec.description}}
         </div>
-        <div class="igz-col-25 common-table-cell created-by">
+        <div data-ng-if="$ctrl.isDemoMode()"
+             class="igz-col-25 common-table-cell created-by">
             {{$ctrl.project.spec.created_by}}
         </div>
-        <div class="igz-col-25 common-table-cell created-date">
+        <div data-ng-if="$ctrl.isDemoMode()"
+             class="igz-col-25 common-table-cell created-date">
             {{$ctrl.project.spec.created_date | date: 'MMM dd, yyyy'}}
         </div>
     </div>
