--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -26,7 +26,7 @@
                         <igz-number-input data-form-object="$ctrl.resourcesForm"
                                           data-input-name="minReplicas"
                                           data-current-value="$ctrl.minReplicas"
-                                          data-default-value="0"
+                                          data-default-value=""
                                           data-update-number-input-callback="$ctrl.numberInputCallback(newData, field)"
                                           data-update-number-input-field="minReplicas"
                                           data-placeholder=""
@@ -40,7 +40,7 @@
                         <igz-number-input data-form-object="$ctrl.resourcesForm"
                                           data-input-name="maxReplicas"
                                           data-current-value="$ctrl.maxReplicas"
-                                          data-default-value="0"
+                                          data-default-value=""
                                           data-update-number-input-callback="$ctrl.numberInputCallback(newData, field)"
                                           data-update-number-input-field="maxReplicas"
                                           data-placeholder=""
