--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -1,4 +1,4 @@
-<div class="ncl-version-configuration" data-igz-extend-background>
+<div class="ncl-version-configuration ncl-version" data-igz-extend-background>
     <div class="igz-scrollable-container"
          data-ng-scrollbars
          data-ng-scrollbars-config="$ctrl.scrollConfig">
