--- a/src/nuclio/projects/project/functions/version/version-trigger/version-trigger.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-trigger/version-trigger.tpl.html
@@ -1,4 +1,4 @@
-<div class="ncl-version-trigger">
+<div class="ncl-version-trigger ncl-version">
     <div class="common-table">
         <div class="common-table-header header-row">
             <div class="common-table-cell header-name">
