--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -1,5 +1,5 @@
 <div class="tab-content-wrapper">
-    <div class="ncl-edit-version-code">
+    <div class="ncl-edit-version-code ncl-version">
 
         <div class="section-wrapper code-entry-section">
             <form name="$ctrl.versionCodeForm">
