--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -1,3 +1,3 @@
-<div class="ncl-edit-version-monitoring">
+<div class="ncl-edit-version-monitoring ncl-version">
     Edit version monitoring tab
 </div>
