--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -46,7 +46,7 @@
                                           data-placeholder=""
                                           data-decimal-number="0"
                                           data-value-step="1"
-                                          data-min-value="0"></igz-number-input>
+                                          data-min-value="$ctrl.minReplicas"></igz-number-input>
                         <div class="values-label">
                             max
                         </div>
