--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -55,9 +55,63 @@
             </div>
         </div>
     </igz-info-page-actions-bar>
-    <ncl-version-execution-result data-ng-if="$ctrl.isTestResultShown"
-                                       data-test-result="$ctrl.testResult"
-                                       data-toggle-method="$ctrl.toggleTestResult()"></ncl-version-execution-result>
+
+    <div data-ng-if="$ctrl.isTestResultShown"
+         class="ncl-edit-version-execution-result">
+        <div class="igz-scrollable-container"
+             data-ng-scrollbars
+             data-ng-scrollbars-config="$ctrl.scrollConfig">
+            <div class="btn-close igz-icon-close" data-ng-click="$ctrl.toggleTestResult()"></div>
+            <div class="ncl-execution-result-status"
+                 data-ng-class="{'succeeded': $ctrl.testResult.status.state === 'Succeeded'}">
+        <span class="result-status-icon"
+              data-ng-class="$ctrl.testResult.status.state === 'Succeeded' ? 'igz-icon-tick-round' : 'igz-icon-block'"></span>
+                Execution results: {{$ctrl.testResult.status.state}}
+            </div>
+            <div class="ncl-execution-result-block">
+                <div class="collapsed-block-title"
+                     data-ng-click="$ctrl.onRowCollapse('isStatusCodeCollapsed')"
+                     data-ng-class="{'collapsed': $ctrl.isStatusCodeCollapsed}">
+            <span class="icon-collapsed"
+                  data-ng-class="$ctrl.isStatusCodeCollapsed ? 'igz-icon-right' : 'igz-icon-down'"></span>
+                    Status code
+                </div>
+                <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.isStatusCodeCollapsed">
+                    <div class="value-row">
+                        {{$ctrl.testResult.status.code}}
+                    </div>
+                </div>
+            </div>
+            <div class="ncl-execution-result-block">
+                <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('isHeadersCollapsed')"
+                     data-ng-class="{'collapsed': $ctrl.isHeadersCollapsed}">
+            <span class="icon-collapsed"
+                  data-ng-class="$ctrl.isHeadersCollapsed ? 'igz-icon-right' : 'igz-icon-down'"></span>
+                    Headers
+                </div>
+                <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.isHeadersCollapsed">
+                    <div class="label-value-row" data-ng-repeat="(headerName, headerValue) in $ctrl.testResult.headers">
+                        <div class="label-cell">{{headerName}}</div>
+                        <div class="value-cell">{{headerValue}}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="ncl-execution-result-block">
+                <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('isBodyCollapsed')"
+                     data-ng-class="{'collapsed': $ctrl.isBodyCollapsed}">
+            <span class="icon-collapsed"
+                  data-ng-class="$ctrl.isBodyCollapsed ? 'igz-icon-right' : 'igz-icon-down'"></span>
+                    Body
+                </div>
+                <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.isBodyCollapsed">
+                    <div class="value-row">
+                        {"metadata":{"name":"name","namespace":"nuclio"}}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <ncl-navigation-tabs data-tab-items="$ctrl.navigationTabsConfig"></ncl-navigation-tabs>
     <section class="ncl-edit-version-view" data-igz-extend-background data-ui-view="version"></section>
 </div>
