Fix [nuclio] Do not send `spec.image` on deploy
Also, remove button tooltips from "Create project", "Create function"
and "Deploy".

--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -53,12 +53,7 @@
             <div class="actions-bar-left actions-buttons-block">
                 <button class="ncl-new-entity-button"
                         data-ng-class="{'disabled': $ctrl.deployResult.status.state === 'building'}"
-                        data-ng-click="$ctrl.deployResult.status.state === 'building' || $ctrl.deployVersion()"
-                        data-tooltip="Deploy a version"
-                        data-tooltip-placement="bottom"
-                        data-tooltip-append-to-body="true"
-                        data-tooltip-popup-delay="100"
-                        data-tooltip-class="custom-tooltip">
+                        data-ng-click="$ctrl.deployResult.status.state === 'building' || $ctrl.deployVersion()">
                     Deploy
                 </button>
             </div>
