--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -11,12 +11,7 @@
         <div class="actions-bar-right">
             <div class="actions-bar-left actions-buttons-block">
                 <button class="ncl-new-entity-button"
-                        data-ng-click="$ctrl.openNewProjectDialog()"
-                        data-tooltip="Create a project"
-                        data-tooltip-placement="bottom"
-                        data-tooltip-append-to-body="true"
-                        data-tooltip-popup-delay="100"
-                        data-tooltip-class="custom-tooltip">
+                        data-ng-click="$ctrl.openNewProjectDialog()">
                     Create project
                 </button>
             </div>
