--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -27,12 +27,7 @@
         <div class="actions-bar-right">
             <div class="actions-bar-left actions-buttons-block">
                 <button class="ncl-new-entity-button"
-                        data-ng-click="$ctrl.openNewFunctionScreen()"
-                        data-tooltip="Create a function"
-                        data-tooltip-placement="bottom"
-                        data-tooltip-append-to-body="true"
-                        data-tooltip-popup-delay="100"
-                        data-tooltip-class="custom-tooltip">
+                        data-ng-click="$ctrl.openNewFunctionScreen()">
                     Create function
                 </button>
             </div>
