--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -120,6 +120,7 @@
                                 <div data-igz-show-hide-search-item="function">
                                     <ncl-function-collapsing-row data-function="function"
                                                                  data-project="$ctrl.project"
+                                                                 data-functions-list="$ctrl.functions"
                                                                  data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)">
                                     </ncl-function-collapsing-row>
                                 </div>
