--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -131,7 +131,7 @@
             <div class="btn-close igz-icon-close"
                  data-ng-if="$ctrl.deployResult.status.state !== 'building'"
                  data-ng-click="$ctrl.toggleDeployResult()"></div>
-            <div class="icon-collabled general-content"
+            <div class="icon-collapsed general-content"
                  data-ng-class="$ctrl.rowIsCollapsed.deployBlock ? 'igz-icon-right' : 'igz-icon-down'"
                  data-ng-click="$ctrl.onRowCollapse('deployBlock')"></div>
             <div class="ncl-execution-result-status"
